k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  namespace: todo-app
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "todo-app-ip"
    networking.gke.io/managed-certificates: "todo-app-cert"
    kubernetes.io/ingress.allow-http: "true"
spec:
  defaultBackend:
    service:
      name: todo-app-go-service
      port:
        number: 80
